--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.12.5",
     "babel-loader": "^8.1.0",
+    "file-loader": "^6.2.0",
     "nodemon": "^2.0.4",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
+    "webpack-dev-middleware": "^4.0.2",
+    "webpack-hot-middleware": "^2.25.0",
     "webpack-node-externals": "^2.5.2"
   },
   "dependencies": {
